--- a/JS/test.html
+++ b/JS/test.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="FaultyCalculator.js"></script>
+    <!-- <script src="FaultyCalculator.js"></script> -->
+    <script src="loopswitharrays.js"></script>
+
 </body>
 </html>
