--- a/JS/Document Obj Model/parent ele child.html
+++ b/JS/Document Obj Model/parent ele child.html
@@ -22,20 +22,22 @@
         <div class="box">Box 2</div>
         <div class="box">Box 3</div>
         <div class="box">Box 4</div>
+        <div class="box">Box 5</div>
     </div>
+    
     <table class="info">
         <tr>
             <th>Name</th>
             <th>Designation</th>
             <th colspan="2">Favourite Language</th>
         </tr>
-
+        
         <tr>
             <td colspan="2">Shashank</td>
             <td>Coder</td>
             <td>Python</td>
         </tr>
-    </table>
-    <script src = "script.js"></script>
+    </table> 
+    <script src = "parent element children.js"></script>
 </body>
 </html>
