add video num css

--- a/JS/Document Obj Model/website builder.html
+++ b/JS/Document Obj Model/website builder.html
@@ -16,17 +16,29 @@
     .container {
       display: flex;
       flex-direction: column;
-      margin: 10px;
+      
     }
     .card {
       background-color: #000000;
       width: auto;
       display: flex;
-      margin: 5px;
+      margin: 0.px;
       border-radius: 12px;
     }
     .card:hover {
       background-color: #2c2c2c;
+    }
+
+    .v_num{
+        position: relative;
+        top: 41px;
+        font-family: "Open Sans";
+        font-size: 14px;
+        font-weight: 700;
+        color: #aaaaaa;
+        padding: 4px;
+        margin-left: 8px;
+
     }
 
     .thumb_and_time {
